--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                     
                     <div class="execute-item">
                         <h3><i class="fas fa-clipboard-list"></i> Pendaftaran</h3>
-                        <p>Gratis! Daftar secepatnya, Quota Terbatas</p>
+                        <p>Gratis! Daftar secepatnya.</p>
                     </div>
                 </div>
             </section>
