--- a/index.html
+++ b/index.html
@@ -678,11 +678,11 @@
             </a>
             <a href="https://www.instagram.com/smk1barunawatijkt?igsh=eHdhaHYwMTltajlj" target="_blank" class="social-card instagram">
                 <i class="fab fa-instagram"></i>
-                <span>Instagram</span>
+                <span>@smk1barunawatijkt</span>
             </a>
             <a href="https://vm.tiktok.com/ZSHo1Q325hFdd-Twdgz/" target="_blank" class="social-card tiktok">
                 <i class="fab fa-tiktok"></i>
-                <span>TikTok</span>
+                <span>@smk1barunawatijkt</span>
             </a>
         </div>
     </div>
