--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                     </div>
                     
                     <div class="date-display">
-                        <div class="date-day">Jum'at</div>
+                        <div class="date-day">SABTU</div>
                         <div class="date-number">31</div>
                         <div class="date-month-year">JANUARI 2026</div>
                     </div>
