--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                             <div class="contact-details">
                                 <div class="contact-role">TRYOUT</div>
                                 <h3 class="contact-name">Ibu Filli Anggreni, S.Pd</h3>
-                                <p class="contact-position">Penanggung Jawab Event Try Out</p>
+                                <p class="contact-position">Penanggung Jawab Event TREN DKV</p>
                                 <a href="https://wa.me/6289652219372?text=Halo%20Ibu%20Filli%20Anggreni,%20saya%20ingin%20bertanya%20tentang%20event%20Try%20Out" class="contact-button" target="_blank">
                                     <i class="fab fa-whatsapp"></i>
                                     Hubungi via WhatsApp
@@ -625,7 +625,7 @@
                             <div class="contact-details">
                                 <div class="contact-role">TREN</div>
                                 <h3 class="contact-name">Bapak Ahmad Zikrulloh,S.Kom</h3>
-                                <p class="contact-position">Penanggung Jawab Event TREN</p>
+                                <p class="contact-position">Penanggung Jawab Event TREN TJKT</p>
                                 <a href="https://wa.me/6281297932837?text=Halo%20Bapak%20Ahmad%20Zikrulloh,%20saya%20ingin%20bertanya%20tentang%20event%20TREN" class="contact-button" target="_blank">
                                     <i class="fab fa-whatsapp"></i>
                                     Hubungi via WhatsApp
@@ -650,7 +650,7 @@
                     
                     <div class="execute-item">
                         <h3><i class="far fa-clock"></i> Waktu Pelaksanaan</h3>
-                        <p>Pukul 07.00 - Selesai. Registrasi dibuka pukul 06.30 WIB</p>
+                        <p>Pukul 13:00 - Selesai. Registrasi dibuka pukul 12:30 WIB</p>
                     </div>
                     
                     <div class="execute-item">
